cmake_minimum_required(VERSION 3.16)
project(test)

set(CMAKE_CXX_STANDARD 14)

add_executable(test main.cpp sort/heap.cpp sort/bucket.cpp greedy/section.cpp greedy/greedy.cpp double_pointer/double_pointer.cpp binary_search/binary_search.cpp divide_and_conquer/divide_and_conquer.cpp search/bfs.cpp search/module.cpp search/dfs.cpp search/backtracking.cpp basic/string_operation.cpp basic/sort.cpp basic/basic_math.cpp basic/pointer.cpp math/math_problem.cpp math/math_method.cpp basic/basic_sort.cpp linked_list/lined_list_problem.cpp tree/tree_problem.cpp basic/vector_queue_deque_map_set.cpp basic/sort7.cpp basic/byte_operation.cpp tree/trie.cpp stack_queue/stack_and_queue.cpp hash/hash_table.cpp string/string_problem.cpp vector_matrix/vector_matrix_problem.cpp dp/dp_problem.cpp dp/bag9/basic_bag.cpp dp/bag9/complete_bag.cpp dp/bag9/multiple_bag.cpp dp/bag9/mixed_bag.cpp dp/bag9/two_dim_bag.cpp dp/bag9/group_bag.cpp double_pointer/sliding_window.cpp dp/bag9/optimal_schemes.cpp dp/bag9/one_optimal_scheme.cpp sort/sort1.cpp bit_operation/bit_operat.cpp basic/sort7.h)